tests/snapshots/schema__multi_schema_all_findings.snap
---
source: tests/schema.rs
expression: findings
---
- rule_id: PGM001
  severity: Critical
  message: "CREATE INDEX on existing table 'inventory.stock' should use CONCURRENTLY to avoid holding a SHARE lock that blocks writes."
  file: repos/multi-schema/migrations/V002__cross_schema_fks.sql
  start_line: 17
  end_line: 17
- rule_id: PGM014
  severity: Critical
  message: "Adding FOREIGN KEY constraint on existing table 'billing.invoices' without NOT VALID will scan the entire table while holding a SHARE ROW EXCLUSIVE lock on both the referencing and referenced tables. Use ADD CONSTRAINT ... NOT VALID, then VALIDATE CONSTRAINT in a separate statement."
  file: repos/multi-schema/migrations/V002__cross_schema_fks.sql
  start_line: 2
  end_line: 4
- rule_id: PGM014
  severity: Critical
  message: "Adding FOREIGN KEY constraint on existing table 'inventory.stock' without NOT VALID will scan the entire table while holding a SHARE ROW EXCLUSIVE lock on both the referencing and referenced tables. Use ADD CONSTRAINT ... NOT VALID, then VALIDATE CONSTRAINT in a separate statement."
  file: repos/multi-schema/migrations/V002__cross_schema_fks.sql
  start_line: 7
  end_line: 9
- rule_id: PGM014
  severity: Critical
  message: "Adding FOREIGN KEY constraint on existing table 'orders' without NOT VALID will scan the entire table while holding a SHARE ROW EXCLUSIVE lock on both the referencing and referenced tables. Use ADD CONSTRAINT ... NOT VALID, then VALIDATE CONSTRAINT in a separate statement."
  file: repos/multi-schema/migrations/V002__cross_schema_fks.sql
  start_line: 12
  end_line: 14
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_stock_product': add IF NOT EXISTS for idempotent migrations."
  file: repos/multi-schema/migrations/V002__cross_schema_fks.sql
  start_line: 17
  end_line: 17
- rule_id: PGM501
  severity: Major
  message: "Foreign key on 'billing.invoices(user_id)' has no covering index. Queries joining or filtering on these columns, and referential integrity checks, cause sequential scans on the referencing table."
  file: repos/multi-schema/migrations/V002__cross_schema_fks.sql
  start_line: 2
  end_line: 4
- rule_id: PGM501
  severity: Major
  message: "Foreign key on 'orders(product_id)' has no covering index. Queries joining or filtering on these columns, and referential integrity checks, cause sequential scans on the referencing table."
  file: repos/multi-schema/migrations/V002__cross_schema_fks.sql
  start_line: 12
  end_line: 14
- rule_id: PGM001
  severity: Critical
  message: "CREATE INDEX on existing table 'auth.users' should use CONCURRENTLY to avoid holding a SHARE lock that blocks writes."
  file: repos/multi-schema/migrations/V003__same_name_isolation.sql
  start_line: 8
  end_line: 8
- rule_id: PGM001
  severity: Critical
  message: "CREATE INDEX on existing table 'billing.users' should use CONCURRENTLY to avoid holding a SHARE lock that blocks writes."
  file: repos/multi-schema/migrations/V003__same_name_isolation.sql
  start_line: 11
  end_line: 11
- rule_id: PGM101
  severity: Minor
  message: "Column 'last_login' on 'auth.users' uses 'timestamp without time zone'. Use 'timestamptz' (timestamp with time zone) instead to store unambiguous points in time."
  file: repos/multi-schema/migrations/V003__same_name_isolation.sql
  start_line: 2
  end_line: 2
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_auth_users_email': add IF NOT EXISTS for idempotent migrations."
  file: repos/multi-schema/migrations/V003__same_name_isolation.sql
  start_line: 8
  end_line: 8
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_billing_users_acct': add IF NOT EXISTS for idempotent migrations."
  file: repos/multi-schema/migrations/V003__same_name_isolation.sql
  start_line: 11
  end_line: 11
- rule_id: PGM107
  severity: Major
  message: "Primary key column 'id' on 'users' uses integer. Consider using bigint to avoid exhausting the integer range on high-write tables."
  file: repos/multi-schema/migrations/V004__drop_schema_isolation.sql
  start_line: 8
  end_line: 11
- rule_id: PGM201
  severity: Minor
  message: "DROP TABLE 'billing.users' removes an existing table. This is irreversible and all data will be lost."
  file: repos/multi-schema/migrations/V004__drop_schema_isolation.sql
  start_line: 2
  end_line: 2
- rule_id: PGM401
  severity: Minor
  message: "DROP TABLE 'billing.users': add IF EXISTS for idempotent migrations."
  file: repos/multi-schema/migrations/V004__drop_schema_isolation.sql
  start_line: 2
  end_line: 2
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'users': add IF NOT EXISTS for idempotent migrations."
  file: repos/multi-schema/migrations/V004__drop_schema_isolation.sql
  start_line: 8
  end_line: 11
